[metadata]
name = pyds
version = 0.0.1

[options]
packages = find:
include_package_data = True
install_requires =
    typer >=0.4.0
    pyyaml >=6.0
    jinja2 >=3.0.2
    loguru >=0.5.3
    pyprojroot >=0.2.0
    python-dotenv >=0.19.1
    rich >=10.12.0
    ruamel.yaml >=0.17.17
    case-converter >=1.0.2


[options.package_data]
pyds = pyds.cli.templates/*/**.j2

[options.entry_points]
console_scripts =
    pyds = pyds.cli:app
